Revision history for Module::Provision

0.20.2    2013-08-19 14:59:28
          - Fixed prereq report with Dzil
          - Bumped dependencies

0.19.5    2013-08-17 16:37:36
          - Switched to Dist::Zilla

0.18.4    2013-08-10 22:17:28
          - Updated share/dist.ini. Added share/DZ_Build.PL
          - Stopping testing on windows until RT#87575 is fixed
            febd397b-6bf5-1014-b508-69147d50f5d1
          - Toolchain update. Attempt to filter out residual noise
          - Misconfigured smoker 3c25f6a5-6c83-1014-9715-b1a9b77d427c
            c.f. df2446e9-6c38-1014-8bcf-004655012b15. Cannot see error
            because of RT#87575. Toolchain updated
          - Moved D::Z::P::ManifestInRoot to own dist

0.17.22   2013-08-03 20:22:50
          - Moved Moo::Role to after function imports
          - Another new method for CPANTesting min Perl ver
          - New method for CPANTesting min Perl ver
          - Added fremen and frogman to tier gruber
          - Aborting Bingoes failed see df276fba-f57c-11e2-8c80-50d7c5c10595
            No choice but to send this smoker to sleep 10 while 1.
            Chris Williams, put my pause id in your stop list
          - Fixed distname double definition bug
          - Bumped File::DataClass dependency
          - Added dump_stash
          - List methods displays abstracts
          - Added branch_file attribute
          - Prove now runs individual test scripts
          - Added set_branch
          - Mooified

0.16.3    2013-06-25 16:26:24
          - Commit msg hook prefers message file content

0.15.10   2013-05-23 23:02:32
          - Better version diff in ::PrereqDiffereces
          - Fixed bug ::PrereqDifference::_consolidate
          - Updated ::Base POD
          - Enhanced CPAN Testing exception method
          - Simplified ::Base::chdir
          - Bumped Class::Usul version
          - Renamed C::U::Functions say to emit
          - Added requires to ::CPANDists