@@ -1,4 +1,4 @@
-; @(#)$Ident: dist.ini 2013-08-14 22:41 pjf ;
+; @(#)$Ident: dist.ini 2013-08-21 11:28 pjf ;
 
 name              = [% distname %]
 abstract          = [% abstract %]
@@ -40,8 +40,8 @@ license           = http://dev.perl.org/licenses/
 homepage          = https://metacpan.org/author/[% author_ID %]
 bugtracker.web    = http://rt.cpan.org/NoAuth/Bugs.html?Dist=[% distname %]
 bugtracker.mailto = bug-[% distname %]@rt.cpan.org
-;repository.url   = git://github.com/[% author_id %]/[% distname_lc %].git
-;repository.web   = http://github.com/[% author_id %]/[% distname_lc %]
+;repository.url   = git://github.com/[% author_id %]/p5-[% lc_distname %].git
+;repository.web   = http://github.com/[% author_id %]/p5-[% lc_distname %]
 ;repository.type  = git
 
 ; So apparently order matters
