@@ -1,6 +1,7 @@
 Revision history for Module::Provision
 
 0.20.2    2013-08-19 14:59:28
+          - Filter Dzil project file from prereq report
           - Fixed prereq report with Dzil
           - Bumped dependencies
 
